--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://adoring-colden-3a909f.netlify.app"
+baseurl = "https://iviaggidialice.netlify.app"
 googleAnalytics = ""
 languageCode = "en-us"
 paginate = 6
