--- a/config.toml
+++ b/config.toml
@@ -43,6 +43,17 @@ logo = "uploads/logo.jpg"
 mobile = "+90 000 333 22"
 preloader = true
 search = true
+
+[params.geo]
+title = "Map title"
+# Use pixel for width as well
+width = "100%"
+height = 300
+pre_embed = "https://www.openstreetmap.org/export/embed.html?bbox="
+embed = "9.363741874694826%2C51.97525849656705%2C9.38659429550171%2C51.99197609916384&amp;layer=mapnik&amp;"
+map_big = "mlat=51.9836&amp;mlon=9.3752#map=16/51.9836/9.3752"
+map_big_text = "Bigger map please"
+
 [params.cookies]
 enable = true
 expire_days = 2
